updated the gradcam componentgit add .

--- a/notebooks/data_exploration_final.ipynb
+++ b/notebooks/data_exploration_final.ipynb
@@ -3902,67 +3902,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "id": "dNL_KGIqDh1g",
       "metadata": {
         "id": "dNL_KGIqDh1g"
       },
       "outputs": [],
       "source": [
-        "# class WaferNet(nn.Module):\n",
+        "class WaferNet(nn.Module):\n",
         "\n",
-        "#     def __init__(self, n_classes=9, in_ch=2, use_gmp=True, dropout_p=0.10, use_eca=False, k_size=3):\n",
-        "#         super().__init__()\n",
-        "#         m = models.densenet121(weights=None)\n",
-        "#         # (Optional stem soften later) current: 7x7 s2\n",
-        "#         m.features.conv0 = nn.Conv2d(in_ch, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
-        "#         self.features = m.features\n",
-        "#         self.norm = nn.BatchNorm2d(1024)\n",
-        "#         self.relu = nn.ReLU(inplace=True)\n",
+        "    def __init__(self, n_classes=9, in_ch=2, use_gmp=True, dropout_p=0.10, use_eca=False, k_size=3):\n",
+        "        super().__init__()\n",
+        "        m = models.densenet121(weights=None)\n",
+        "        # (Optional stem soften later) current: 7x7 s2\n",
+        "        m.features.conv0 = nn.Conv2d(in_ch, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
+        "        self.features = m.features\n",
+        "        self.norm = nn.BatchNorm2d(1024)\n",
+        "        self.relu = nn.ReLU(inplace=True)\n",
         "\n",
-        "#         self.use_eca = use_eca\n",
-        "#         self.eca = ECA(1024, k_size=k_size) if use_eca else nn.Identity()\n",
+        "        self.use_eca = use_eca\n",
+        "        self.eca = ECA(1024, k_size=k_size) if use_eca else nn.Identity()\n",
         "\n",
-        "#         self.use_gmp = use_gmp\n",
-        "#         feat_dim = 1024\n",
-        "#         head_dim = feat_dim * (2 if use_gmp else 1)\n",
-        "#         self.dropout = nn.Dropout(p=dropout_p) if dropout_p else nn.Identity()\n",
-        "#         self.cls = nn.Linear(head_dim, n_classes)\n",
+        "        self.use_gmp = use_gmp\n",
+        "        feat_dim = 1024\n",
+        "        head_dim = feat_dim * (2 if use_gmp else 1)\n",
+        "        self.dropout = nn.Dropout(p=dropout_p) if dropout_p else nn.Identity()\n",
+        "        self.cls = nn.Linear(head_dim, n_classes)\n",
         "\n",
-        "#     1@staticmethod\n",
-        "#     def masked_gap(feat, mask):\n",
-        "#         masked = feat * mask\n",
-        "#         denom = mask.sum((2, 3)).clamp_min(1e-6)\n",
-        "#         return masked.sum((2, 3)) / denom\n",
+        "    1@staticmethod\n",
+        "    def masked_gap(feat, mask):\n",
+        "        masked = feat * mask\n",
+        "        denom = mask.sum((2, 3)).clamp_min(1e-6)\n",
+        "        return masked.sum((2, 3)) / denom\n",
         "\n",
-        "#     2@staticmethod\n",
-        "#     def masked_gmp(feat, mask):\n",
-        "#         # Use a SAFE sentinel to avoid overflow in the linear head\n",
-        "#         very_neg = feat.new_tensor(-1e4)            # <- not finfo.min\n",
-        "#         masked = torch.where(mask > 0, feat, very_neg)\n",
-        "#         gmp = masked.amax((2, 3))\n",
-        "#         # Final guard\n",
-        "#         return torch.nan_to_num(gmp, nan=0.0, posinf=1e4, neginf=-1e4)\n",
+        "    2@staticmethod\n",
+        "    def masked_gmp(feat, mask):\n",
+        "        # Use a SAFE sentinel to avoid overflow in the linear head\n",
+        "        very_neg = feat.new_tensor(-1e4)            # <- not finfo.min\n",
+        "        masked = torch.where(mask > 0, feat, very_neg)\n",
+        "        gmp = masked.amax((2, 3))\n",
+        "        # Final guard\n",
+        "        return torch.nan_to_num(gmp, nan=0.0, posinf=1e4, neginf=-1e4)\n",
         "\n",
-        "#     def forward(self, x):\n",
-        "#         mask = x[:, 1:2]\n",
-        "#         feat = self.features(x)\n",
-        "#         feat = self.relu(self.norm(feat))\n",
-        "#         feat = self.eca(feat)\n",
+        "    def forward(self, x):\n",
+        "        mask = x[:, 1:2]\n",
+        "        feat = self.features(x)\n",
+        "        feat = self.relu(self.norm(feat))\n",
+        "        feat = self.eca(feat)\n",
         "\n",
-        "#         mask_ds = F.interpolate(mask, size=feat.shape[-2:], mode=\"nearest\")\n",
+        "        mask_ds = F.interpolate(mask, size=feat.shape[-2:], mode=\"nearest\")\n",
         "\n",
-        "#         # If any sample has an empty mask after downsampling, fall back to all-ones\n",
-        "#         empty = (mask_ds.sum((2, 3)) == 0)\n",
-        "#         if empty.any():\n",
-        "#             mask_ds = mask_ds.clone()\n",
-        "#             mask_ds[empty] = 1.0\n",
+        "        # If any sample has an empty mask after downsampling, fall back to all-ones\n",
+        "        empty = (mask_ds.sum((2, 3)) == 0)\n",
+        "        if empty.any():\n",
+        "            mask_ds = mask_ds.clone()\n",
+        "            mask_ds[empty] = 1.0\n",
         "\n",
-        "#         gap = self.masked_gap(feat, mask_ds)\n",
-        "#         gmp = self.masked_gmp(feat, mask_ds)\n",
-        "#         h = torch.cat([gap, gmp], dim=1)\n",
-        "#         h = torch.nan_to_num(h, nan=0.0, posinf=1e6, neginf=-1e6)  # extra belt & braces\n",
-        "#         return self.cls(h)"
+        "        gap = self.masked_gap(feat, mask_ds)\n",
+        "        gmp = self.masked_gmp(feat, mask_ds)\n",
+        "        h = torch.cat([gap, gmp], dim=1)\n",
+        "        h = torch.nan_to_num(h, nan=0.0, posinf=1e6, neginf=-1e6)  # extra belt & braces\n",
+        "        return self.cls(h)"
       ]
     },
     {
@@ -3977,127 +3977,127 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "id": "4lIFnFuaR_lf",
       "metadata": {
         "id": "4lIFnFuaR_lf"
       },
       "outputs": [],
       "source": [
-        "class WaferNet(nn.Module):\n",
-        "    \"\"\"\n",
-        "    head_mode:\n",
-        "      - 'masked_gap_gmp' : (default) masked GAP || masked GMP → Linear  (uses mask channel)\n",
-        "      - 'masked_gap'     : masked GAP only → Linear                      (uses mask channel)\n",
-        "      - 'unmasked_gap'   : standard GAP (no mask) → Linear\n",
-        "      - 'flatten'        : no global pooling, Flatten(1024*3*3) → Linear\n",
-        "      - 'builtin'        : use DenseNet-121's built-in classifier head (no mask/ECA/GMP/GAP here)\n",
-        "    \"\"\"\n",
+        "# class WaferNet(nn.Module):\n",
+        "#     \"\"\"\n",
+        "#     head_mode:\n",
+        "#       - 'masked_gap_gmp' : (default) masked GAP || masked GMP → Linear  (uses mask channel)\n",
+        "#       - 'masked_gap'     : masked GAP only → Linear                      (uses mask channel)\n",
+        "#       - 'unmasked_gap'   : standard GAP (no mask) → Linear\n",
+        "#       - 'flatten'        : no global pooling, Flatten(1024*3*3) → Linear\n",
+        "#       - 'builtin'        : use DenseNet-121's built-in classifier head (no mask/ECA/GMP/GAP here)\n",
+        "#     \"\"\"\n",
         "\n",
-        "    def __init__(\n",
-        "        self,\n",
-        "        n_classes=9,\n",
-        "        in_ch=2,\n",
-        "        use_gmp=False,\n",
-        "        dropout_p=0.25,\n",
-        "        use_eca=False,\n",
-        "        k_size=3,\n",
-        "        head_mode='builtin'\n",
-        "    ):\n",
-        "        super().__init__()\n",
-        "        self.head_mode = head_mode\n",
-        "        self.use_eca = use_eca\n",
-        "        self.use_gmp = use_gmp\n",
+        "#     def __init__(\n",
+        "#         self,\n",
+        "#         n_classes=9,\n",
+        "#         in_ch=2,\n",
+        "#         use_gmp=False,\n",
+        "#         dropout_p=0.25,\n",
+        "#         use_eca=False,\n",
+        "#         k_size=3,\n",
+        "#         head_mode='builtin'\n",
+        "#     ):\n",
+        "#         super().__init__()\n",
+        "#         self.head_mode = head_mode\n",
+        "#         self.use_eca = use_eca\n",
+        "#         self.use_gmp = use_gmp\n",
         "\n",
-        "        if self.head_mode == 'builtin':\n",
-        "            # Pure DenseNet-121 with its own classifier (no custom GAP/GMP/mask/ECA)\n",
-        "            m = models.densenet121(weights=None, num_classes=n_classes)\n",
-        "            m.features.conv0 = nn.Conv2d(in_ch, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
-        "            self.backbone = m\n",
-        "            return\n",
+        "#         if self.head_mode == 'builtin':\n",
+        "#             # Pure DenseNet-121 with its own classifier (no custom GAP/GMP/mask/ECA)\n",
+        "#             m = models.densenet121(weights=None, num_classes=n_classes)\n",
+        "#             m.features.conv0 = nn.Conv2d(in_ch, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
+        "#             self.backbone = m\n",
+        "#             return\n",
         "\n",
-        "        # DenseNet features trunk\n",
-        "        m = models.densenet121(weights=None)\n",
-        "        m.features.conv0 = nn.Conv2d(in_ch, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
-        "        self.features = m.features\n",
+        "#         # DenseNet features trunk\n",
+        "#         m = models.densenet121(weights=None)\n",
+        "#         m.features.conv0 = nn.Conv2d(in_ch, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
+        "#         self.features = m.features\n",
         "\n",
-        "        # Neck: BN+ReLU (+ optional ECA)\n",
-        "        self.norm = nn.BatchNorm2d(1024)\n",
-        "        self.relu = nn.ReLU(inplace=True)\n",
-        "        self.eca = ECA(1024, k_size=k_size) if self.use_eca else nn.Identity()\n",
+        "#         # Neck: BN+ReLU (+ optional ECA)\n",
+        "#         self.norm = nn.BatchNorm2d(1024)\n",
+        "#         self.relu = nn.ReLU(inplace=True)\n",
+        "#         self.eca = ECA(1024, k_size=k_size) if self.use_eca else nn.Identity()\n",
         "\n",
-        "        # Heads\n",
-        "        if self.head_mode == 'unmasked_gap':\n",
-        "            self.gap = nn.AdaptiveAvgPool2d(1)        # standard GAP (no mask)\n",
-        "            head_dim = 1024\n",
-        "        elif self.head_mode == 'flatten':\n",
-        "            head_dim = 1024 * 3 * 3                   # assumes 96x96 → 3x3 final map\n",
-        "        elif self.head_mode == 'masked_gap':\n",
-        "            head_dim = 1024\n",
-        "        elif self.head_mode == 'masked_gap_gmp':\n",
-        "            head_dim = 1024 * (2 if self.use_gmp else 1)\n",
-        "        else:\n",
-        "            raise ValueError(f\"Unknown head_mode: {self.head_mode}\")\n",
+        "#         # Heads\n",
+        "#         if self.head_mode == 'unmasked_gap':\n",
+        "#             self.gap = nn.AdaptiveAvgPool2d(1)        # standard GAP (no mask)\n",
+        "#             head_dim = 1024\n",
+        "#         elif self.head_mode == 'flatten':\n",
+        "#             head_dim = 1024 * 3 * 3                   # assumes 96x96 → 3x3 final map\n",
+        "#         elif self.head_mode == 'masked_gap':\n",
+        "#             head_dim = 1024\n",
+        "#         elif self.head_mode == 'masked_gap_gmp':\n",
+        "#             head_dim = 1024 * (2 if self.use_gmp else 1)\n",
+        "#         else:\n",
+        "#             raise ValueError(f\"Unknown head_mode: {self.head_mode}\")\n",
         "\n",
-        "        self.dropout = nn.Dropout(p=dropout_p) if dropout_p else nn.Identity()\n",
-        "        self.cls = nn.Linear(head_dim, n_classes)\n",
+        "#         self.dropout = nn.Dropout(p=dropout_p) if dropout_p else nn.Identity()\n",
+        "#         self.cls = nn.Linear(head_dim, n_classes)\n",
         "\n",
-        "    @staticmethod\n",
-        "    def masked_gap(feat, mask):\n",
-        "        masked = feat * mask\n",
-        "        denom = mask.sum((2, 3)).clamp_min(1e-6)\n",
-        "        return masked.sum((2, 3)) / denom\n",
+        "#     @staticmethod\n",
+        "#     def masked_gap(feat, mask):\n",
+        "#         masked = feat * mask\n",
+        "#         denom = mask.sum((2, 3)).clamp_min(1e-6)\n",
+        "#         return masked.sum((2, 3)) / denom\n",
         "\n",
-        "    @staticmethod\n",
-        "    def masked_gmp(feat, mask):\n",
-        "        very_neg = feat.new_tensor(-1e4)             # safe sentinel (avoid -inf)\n",
-        "        masked = torch.where(mask > 0, feat, very_neg)\n",
-        "        gmp = masked.amax((2, 3))\n",
-        "        return torch.nan_to_num(gmp, nan=0.0, posinf=1e4, neginf=-1e4)\n",
+        "#     @staticmethod\n",
+        "#     def masked_gmp(feat, mask):\n",
+        "#         very_neg = feat.new_tensor(-1e4)             # safe sentinel (avoid -inf)\n",
+        "#         masked = torch.where(mask > 0, feat, very_neg)\n",
+        "#         gmp = masked.amax((2, 3))\n",
+        "#         return torch.nan_to_num(gmp, nan=0.0, posinf=1e4, neginf=-1e4)\n",
         "\n",
-        "    def forward(self, x):\n",
-        "        # Built-in DenseNet head: no custom attention/masking/pooling\n",
-        "        if self.head_mode == 'builtin':\n",
-        "            return self.backbone(x)\n",
+        "#     def forward(self, x):\n",
+        "#         # Built-in DenseNet head: no custom attention/masking/pooling\n",
+        "#         if self.head_mode == 'builtin':\n",
+        "#             return self.backbone(x)\n",
         "\n",
-        "        # Common trunk\n",
-        "        feat = self.features(x)                       # [B,1024,3,3] for 96x96 inputs\n",
-        "        feat = self.relu(self.norm(feat))\n",
-        "        feat = self.eca(feat)\n",
+        "#         # Common trunk\n",
+        "#         feat = self.features(x)                       # [B,1024,3,3] for 96x96 inputs\n",
+        "#         feat = self.relu(self.norm(feat))\n",
+        "#         feat = self.eca(feat)\n",
         "\n",
-        "        if self.head_mode == 'unmasked_gap':\n",
-        "            h = self.gap(feat).flatten(1)            # [B,1024]\n",
+        "#         if self.head_mode == 'unmasked_gap':\n",
+        "#             h = self.gap(feat).flatten(1)            # [B,1024]\n",
         "\n",
-        "        elif self.head_mode == 'flatten':\n",
-        "            h = feat.flatten(1)                      # [B,1024*3*3]\n",
+        "#         elif self.head_mode == 'flatten':\n",
+        "#             h = feat.flatten(1)                      # [B,1024*3*3]\n",
         "\n",
-        "        else:\n",
-        "            # Mask-aware modes\n",
-        "            mask = x[:, 1:2]\n",
-        "            mask_ds = F.interpolate(mask, size=feat.shape[-2:], mode=\"nearest\")\n",
+        "#         else:\n",
+        "#             # Mask-aware modes\n",
+        "#             mask = x[:, 1:2]\n",
+        "#             mask_ds = F.interpolate(mask, size=feat.shape[-2:], mode=\"nearest\")\n",
         "\n",
-        "            # If any sample has an empty mask after downsampling, fall back to all-ones\n",
-        "            empty = (mask_ds.sum((2, 3)) == 0)\n",
-        "            if empty.any():\n",
-        "                mask_ds = mask_ds.clone()\n",
-        "                mask_ds[empty] = 1.0\n",
+        "#             # If any sample has an empty mask after downsampling, fall back to all-ones\n",
+        "#             empty = (mask_ds.sum((2, 3)) == 0)\n",
+        "#             if empty.any():\n",
+        "#                 mask_ds = mask_ds.clone()\n",
+        "#                 mask_ds[empty] = 1.0\n",
         "\n",
-        "            if self.head_mode == 'masked_gap':\n",
-        "                gap = self.masked_gap(feat, mask_ds)              # [B,1024]\n",
-        "                h = gap\n",
-        "            elif self.head_mode == 'masked_gap_gmp':\n",
-        "                gap = self.masked_gap(feat, mask_ds)              # [B,1024]\n",
-        "                if self.use_gmp:\n",
-        "                    gmp = self.masked_gmp(feat, mask_ds)          # [B,1024]\n",
-        "                    h = torch.cat([gap, gmp], dim=1)              # [B,2048]\n",
-        "                else:\n",
-        "                    h = gap\n",
-        "            else:\n",
-        "                raise RuntimeError(\"Unreachable head_mode\")\n",
+        "#             if self.head_mode == 'masked_gap':\n",
+        "#                 gap = self.masked_gap(feat, mask_ds)              # [B,1024]\n",
+        "#                 h = gap\n",
+        "#             elif self.head_mode == 'masked_gap_gmp':\n",
+        "#                 gap = self.masked_gap(feat, mask_ds)              # [B,1024]\n",
+        "#                 if self.use_gmp:\n",
+        "#                     gmp = self.masked_gmp(feat, mask_ds)          # [B,1024]\n",
+        "#                     h = torch.cat([gap, gmp], dim=1)              # [B,2048]\n",
+        "#                 else:\n",
+        "#                     h = gap\n",
+        "#             else:\n",
+        "#                 raise RuntimeError(\"Unreachable head_mode\")\n",
         "\n",
-        "        h = torch.nan_to_num(h, nan=0.0, posinf=1e6, neginf=-1e6)\n",
-        "        h = self.dropout(h)\n",
-        "        return self.cls(h)\n"
+        "#         h = torch.nan_to_num(h, nan=0.0, posinf=1e6, neginf=-1e6)\n",
+        "#         h = self.dropout(h)\n",
+        "#         return self.cls(h)\n"
       ]
     },
     {
